--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,3 +1,5 @@
+---
+---
 /* ---------- typographic scale ---------- */
 $font-base: "Segoe UI", Roboto, -apple-system, BlinkMacSystemFont, sans-serif;
 
