--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
         <nav class="site-nav">
           <ul class="menu">
             
-    {% assign pages_sorted = site.pages | where: "nav_order" | sort: "nav_order" %}
+    {% assign pages_sorted = site.pages | where_exp: "p", "p.nav_order" | sort: "nav_order" %}
     {% for p in pages_sorted %}
               {%- if p.nav_order -%}
                 <li><a class="page-link" href="{{ p.url | relative_url }}">{{ p.title }}</a></li>
