--- a/assets/style.scss
+++ b/assets/style.scss
@@ -51,9 +51,12 @@ header.site-header {
 }
 
 .wide-content {
-  max-width: 60rem !important;
-  margin: 0 auto;
+  max-width: min(90vw, 80rem) !important;
+  width: 100% !important;
+  margin: 0 auto !important;
   padding: 1rem;
+  position: relative;
+  overflow-x: hidden;
 }
 
 footer.site-footer {
