--- a/assets/style.scss
+++ b/assets/style.scss
@@ -51,7 +51,7 @@ header.site-header {
 }
 
 .wide-content {
-  max-width: 100rem !important;
+  max-width: none;
   margin: 0 auto;
   padding: 1rem;
 }
