--- a/assets/style.scss
+++ b/assets/style.scss
@@ -52,10 +52,9 @@ header.site-header {
 
 /* Make content inside .wide-content extend full viewport width, overriding .wrapper constraints */
 .wrapper .wide-content {
-  width: 100vw;
-  max-width: 45rem;
-  margin-left: calc(50% - 50vw); // centers the element relative to the viewport
-  padding: 1rem;
+  max-width: 60rem;
+  margin: 0 auto;
+  padding: 2rem 1rem;
 }
 
 footer.site-footer {
