added back wide-content

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -51,7 +51,11 @@ header.site-header {
 }
 
 /* Make content inside .wide-content extend full viewport width, overriding .wrapper constraints */
-
+.wide-content {
+  max-width: 60rem;
+  margin: 0 auto;
+  padding: 2rem 1rem;
+}
 
 footer.site-footer {
   border-top: 1px solid #eee;
