--- a/assets/style.scss
+++ b/assets/style.scss
@@ -103,3 +103,11 @@ header.site-header .menu .dropdown .dropdown-content a:hover {
 header.site-header .menu .dropdown:hover .dropdown-content {
   display: block;
 }
+
+/* Allow iframes to extend full viewport width */
+.page-content iframe {
+  width: 100vw;
+  max-width: none;
+  margin-left: calc(50% - 50vw);
+  display: block; /* ensures it acts as a block element */
+}
