--- a/assets/style.scss
+++ b/assets/style.scss
@@ -105,7 +105,7 @@ header.site-header .menu .dropdown:hover .dropdown-content {
 }
 
 /* Allow iframes to extend full viewport width */
-.wrapper iframe{
+.wrapper div{
   width: 60vw;
   max-width: none;
   margin-left: calc(50% - 50vw);
