--- a/assets/style.scss
+++ b/assets/style.scss
@@ -51,7 +51,7 @@ header.site-header {
 }
 
 /* Make content inside .wide-content extend full viewport width, overriding .wrapper constraints */
-.wrapper .wide-content {
+.wide-content {
   max-width: 100rem;
   margin: 0 auto;
   padding: 2rem 1rem;
