--- a/assets/style.scss
+++ b/assets/style.scss
@@ -45,7 +45,7 @@ header.site-header {
 
 /* ---------- content & footer ---------- */
 .wrapper {
-  max-width: var(--wrapper-max-width,42rem);
+  max-width: 60rem;
   margin: 0 auto;
   padding: 2rem 1rem;
 }
