--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,3 +5,5 @@ layout: default
   <h1>{{ page.title }}</h1>
   {{ content }}
 </article>
+
+<script src="{{ '/assets/js/page.js' | relative_url }}"></script>
