Add PDF download functionality using html2pdf.js

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,4 +6,5 @@ layout: default
   {{ content }}
 </article>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 <script src="{{ '/assets/js/page.js' | relative_url }}"></script>
